add music and page